--- a/pom.xml
+++ b/pom.xml
@@ -477,7 +477,7 @@
                 <goal>copy-resources</goal>
               </goals>
               <configuration>
-                <outputDirectory>${tomcat.home}/webapps/${alfresco.client.war}/WEB-INF/lib</outputDirectory>
+                <outputDirectory>${tomcat.home}/webapps/${app.amp.client.war.artifactId}/WEB-INF/lib</outputDirectory>
                 <resources>
                   <resource>
                     <directory>${project.build.directory}/${project.build.finalName}/lib</directory>
@@ -501,7 +501,7 @@
                 <goal>copy-resources</goal>
               </goals>
               <configuration>
-                <outputDirectory>${tomcat.home}/webapps/${alfresco.client.war}</outputDirectory>
+                <outputDirectory>${tomcat.home}/webapps/${app.amp.client.war.artifactId}</outputDirectory>
                 <resources>
                   <resource>
                     <directory>src/main/amp/web</directory>
@@ -556,7 +556,7 @@
                 <goal>copy-resources</goal>
               </goals>
               <configuration>
-                <outputDirectory>${tomcat.home}/webapps/${alfresco.client.war}/WEB-INF/classes</outputDirectory>
+                <outputDirectory>${tomcat.home}/webapps/${app.amp.client.war.artifactId}/WEB-INF/classes</outputDirectory>
                 <resources>
                   <resource>
                     <directory>${project.build.directory}/classes</directory>
