--- a/pom.xml
+++ b/pom.xml
@@ -17,9 +17,60 @@
     <maven.failsafe.version>2.19.1</maven.failsafe.version>
     <maven.surefire.version>2.19.1</maven.surefire.version>
     <maven.cargo.version>1.4.14</maven.cargo.version>
+    <maven-resources-plugin.version>3.0.1</maven-resources-plugin.version>
+    <h2.version>1.4.193</h2.version>
     <failsafe.argLine />
     <jacoco.agent.arg />
     
+    <!-- Below is the required properties from the Alfresco SDK -->
+    <!-- Leaving them out works fine locally but does not when jenkins is used to build -->
+    <!-- Alfresco Maven Plugin version to use -->
+    <alfresco.sdk.version>3.0.0-beta-5</alfresco.sdk.version>
+
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+    <!-- Alfresco Data directory, which will contain:
+    Content Store (i.e. the files we upload)
+    Database (i.e. the metadata for the uploaded files)
+    Search index (i.e. the indexed content and metadata)
+   Configured in alfresco-global.properties with the 'dir.root' property.
+    -->
+    <alfresco.data.location>${project.build.directory}/alf_data_dev</alfresco.data.location>
+
+    <!-- Duplicated with alfresco.solrHome in the plugin, we need them out here to do filtering -->
+    <solr.home>${alfresco.data.location}/solr</solr.home>
+    <solr.model.dir>${solr.home}/alfrescoModels</solr.model.dir>
+    <solr.content.dir>${solr.home}/index</solr.content.dir>
+
+    <!-- Properties used in dependency declarations, you don't need to change these -->
+    <alfresco.groupId>org.alfresco</alfresco.groupId>
+    <alfresco.share.war.artifactId>share</alfresco.share.war.artifactId>
+    <!-- Platform WAR artifact, change to 'alfresco-enterprise' if using Enterprise Edition -->
+    <alfresco.platform.war.artifactId>alfresco-platform</alfresco.platform.war.artifactId>
+
+    <!-- Alfresco Platform and Share webapp versions, these are the original Alfresco webapps that will be
+    customized and then deployed and run by the tomcat maven plugin when
+    executing for example $ mvn clean install alfresco:run -->
+    <alfresco.platform.version>5.2.c-EA</alfresco.platform.version>
+    <alfresco.share.version>5.2.b-EA</alfresco.share.version>
+
+    <!-- Alfresco Surf version, if you change Share version you might need to change Surf version -->
+    <alfresco.surf.version>6.10</alfresco.surf.version>
+
+    <!-- Aikau framework version, it is released separately, so it can be useful to be able
+    to bring in newer versions with bug fixes etc -->
+    <aikau.version>1.0.93</aikau.version>
+
+    <!-- JRebel Hot reloading of classpath stuff and web resource stuff -->
+    <jrebel.version>1.1.6</jrebel.version>
+
+    <!-- Environment to use, Alfresco Maven Plugin will
+    copy alfresco-global-*.properties files from this directory, such as src/test/properties/local -->
+    <env>local</env>
+
+    <!-- Compile with Java 7, default is 5 -->
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
 
   <developers>
@@ -204,6 +255,7 @@
             <plugin>
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-resources-plugin</artifactId>
+              <version>${maven-resources-plugin.version}</version>
               <executions>
                 <execution>
                   <id>hot-copy-resources</id>
@@ -484,6 +536,7 @@
         <dependency>
           <groupId>com.h2database</groupId>
           <artifactId>h2</artifactId>
+          <version>${h2.version}</version>
         </dependency>
      
       </dependencies>
@@ -578,7 +631,7 @@
             <plugin>
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-resources-plugin</artifactId>
-
+              <version>${maven-resources-plugin.version}</version>
               <configuration>
                 <skip>${ft.skip}</skip>
               </configuration>
