--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
     <maven.alfresco.tomcat.port>8765</maven.alfresco.tomcat.port>
+    <maven.alfresco.refresh.port>8765</maven.alfresco.refresh.port>
   </properties>
 
   <developers>
