--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,10 @@
     <maven.compiler.target>1.8</maven.compiler.target>
     <maven.alfresco.tomcat.port>8765</maven.alfresco.tomcat.port>
     <maven.alfresco.refresh.port>8765</maven.alfresco.refresh.port>
+    <!-- Legacy dev profile needs these -->
+    <tomcat.host>localhost</tomcat.host>
+    <tomcat.port>8080</tomcat.port>
+    <alfresco.client.war>alfresco</alfresco.client.war>
   </properties>
 
   <developers>
