--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,11 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.redpill-linpro.alfresco</groupId>
   <artifactId>alfresco-base</artifactId>
-  <version>3.0.2</version>
+  <version>3.0.3-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <name>Redpill Linpro Alfresco Parent POM</name>
@@ -13,7 +14,7 @@
   <properties>
     <jacoco.version>0.7.9</jacoco.version>
     <maven.surefire.version>2.20</maven.surefire.version>
-    <jacoco.agent.arg />
+    <jacoco.agent.arg/>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <!-- Sonar -->
@@ -70,7 +71,7 @@
   </developers>
 
   <contributors>
-    <contributor />
+    <contributor/>
   </contributors>
 
   <scm>
@@ -174,7 +175,9 @@
               <configuration>
                 <filesets>
                   <fileset>
-                    <directory>${tomcat.home}/webapps/${alfresco.client.war}/WEB-INF/classes/alfresco/module/${project.artifactId}</directory>
+                    <directory>
+                      ${tomcat.home}/webapps/${alfresco.client.war}/WEB-INF/classes/alfresco/module/${project.artifactId}
+                    </directory>
                   </fileset>
                   <fileset>
                     <directory>${tomcat.home}/webapps/${alfresco.client.war}/WEB-INF/lib</directory>
@@ -355,7 +358,7 @@
       </build>
     </profile>
 
-   
+
     <!-- ########################################################################## -->
     <!-- code coverage profile that enables jacoco which creates nice code coverage -->
     <!-- on integration tests too                                                   -->
@@ -383,35 +386,35 @@
               <skipTests>${skip.unit.tests}</skipTests>
               <forkCount>1</forkCount>
               <runOrder>random</runOrder>
-          <!-- Excludes integration tests when unit tests are run. 
-          <excludes>
-            <exclude>**/IT*.java</exclude>
-          </excludes>-->
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-failsafe-plugin</artifactId>
-        <version>2.15</version>
-        <executions>
+              <!-- Excludes integration tests when unit tests are run.
+              <excludes>
+                <exclude>**/IT*.java</exclude>
+              </excludes>-->
+            </configuration>
+          </plugin>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-failsafe-plugin</artifactId>
+            <version>2.15</version>
+            <executions>
 
-          <!--
-            Ensures that both integration-test and verify goals of the Failsafe Maven
-            plugin are executed.
-          -->
-          <execution>
-            <id>integration-tests</id>
-            <goals>
-              <goal>integration-test</goal>
-              <goal>verify</goal>
-            </goals>
-            <configuration>
-              <!-- Sets the VM argument line used when integration tests are run. -->
-              <argLine>${failsafeArgLine}</argLine>
-                <!--
-                    Skips integration tests if the value of skip.integration.tests property
-                    is true
-                  -->
+              <!--
+                Ensures that both integration-test and verify goals of the Failsafe Maven
+                plugin are executed.
+              -->
+              <execution>
+                <id>integration-tests</id>
+                <goals>
+                  <goal>integration-test</goal>
+                  <goal>verify</goal>
+                </goals>
+                <configuration>
+                  <!-- Sets the VM argument line used when integration tests are run. -->
+                  <argLine>${failsafeArgLine}</argLine>
+                  <!--
+                      Skips integration tests if the value of skip.integration.tests property
+                      is true
+                    -->
                   <skipTests>${skip.integration.tests}</skipTests>
                 </configuration>
               </execution>
@@ -423,14 +426,17 @@
             <version>${jacoco.version}</version>
             <configuration>
               <append>true</append>
+              <excludes>
+                <exclude>**/*.acp</exclude>
+              </excludes>
             </configuration>
             <executions>
-                       <execution>
-            <id>prepare-agent</id>
-            <goals>
-              <goal>prepare-agent</goal>
-            </goals>
-          </execution>
+              <execution>
+                <id>prepare-agent</id>
+                <goals>
+                  <goal>prepare-agent</goal>
+                </goals>
+              </execution>
               <execution>
                 <id>pre-unit-test</id>
                 <phase>initialize</phase>
@@ -440,89 +446,89 @@
                 <configuration>
                   <!-- Sets the path to the file which contains the execution data. -->
                   <destFile>${jacoco.reportPath}/jacoco-ut.exec</destFile>
-             <!--
-                Sets the name of the property containing the settings
-                for JaCoCo runtime agent.
-              -->
-              <propertyName>surefireArgLine</propertyName>
-            </configuration>
-          </execution>
+                  <!--
+                     Sets the name of the property containing the settings
+                     for JaCoCo runtime agent.
+                   -->
+                  <propertyName>surefireArgLine</propertyName>
+                </configuration>
+              </execution>
 
-          <execution>
-            <id>post-unit-test</id>
-            <phase>test</phase>
-            <goals>
-              <goal>report</goal>
-            </goals>
-            <configuration>
-              <!-- Sets the path to the file which contains the execution data. -->
-              <dataFile>${jacoco.reportPath}/jacoco-ut.exec</dataFile>
-              <!-- Sets the output directory for the code coverage report. -->
-              <outputDirectory>${project.reporting.outputDirectory}/jacoco-ut</outputDirectory>
-            </configuration>
-          </execution>
+              <execution>
+                <id>post-unit-test</id>
+                <phase>test</phase>
+                <goals>
+                  <goal>report</goal>
+                </goals>
+                <configuration>
+                  <!-- Sets the path to the file which contains the execution data. -->
+                  <dataFile>${jacoco.reportPath}/jacoco-ut.exec</dataFile>
+                  <!-- Sets the output directory for the code coverage report. -->
+                  <outputDirectory>${project.reporting.outputDirectory}/jacoco-ut</outputDirectory>
+                </configuration>
+              </execution>
 
-          <!-- The Executions required by unit tests are omitted. -->
-        <!--
-            Prepares the property pointing to the JaCoCo runtime agent which
-            is passed as VM argument when Maven the Failsafe plugin is executed.
-          -->
-          <execution>
-            <id>pre-integration-test</id>
-            <phase>pre-integration-test</phase>
-            <goals>
-              <goal>prepare-agent-integration</goal>
-            </goals>
-            <configuration>
-              <!-- Sets the path to the file which contains the execution data. -->
-              <destFile>${jacoco.reportPath}/jacoco-it.exec</destFile>
-                <!--
-                    Sets the name of the property containing the settings
-                    for JaCoCo runtime agent.
-                  -->
+              <!-- The Executions required by unit tests are omitted. -->
+              <!--
+                  Prepares the property pointing to the JaCoCo runtime agent which
+                  is passed as VM argument when Maven the Failsafe plugin is executed.
+                -->
+              <execution>
+                <id>pre-integration-test</id>
+                <phase>pre-integration-test</phase>
+                <goals>
+                  <goal>prepare-agent-integration</goal>
+                </goals>
+                <configuration>
+                  <!-- Sets the path to the file which contains the execution data. -->
+                  <destFile>${jacoco.reportPath}/jacoco-it.exec</destFile>
+                  <!--
+                      Sets the name of the property containing the settings
+                      for JaCoCo runtime agent.
+                    -->
                   <propertyName>failsafeArgLine</propertyName>
                 </configuration>
               </execution>
-        <!--
-            Ensures that the code coverage report for integration tests after
-            integration tests have been run.
-          -->
-          <execution>
-            <id>post-integration-test</id>
-            <phase>post-integration-test</phase>
-            <goals>
-              <goal>report</goal>
-            </goals>
-            <configuration>
-              <!-- Sets the path to the file which contains the execution data. -->
-              <dataFile>${jacoco.reportPath}/jacoco-it.exec</dataFile>
-              <!-- Sets the output directory for the code coverage report. -->
-              <outputDirectory>${project.reporting.outputDirectory}/jacoco-it</outputDirectory>
-            </configuration>
-          </execution>
+              <!--
+                  Ensures that the code coverage report for integration tests after
+                  integration tests have been run.
+                -->
+              <execution>
+                <id>post-integration-test</id>
+                <phase>post-integration-test</phase>
+                <goals>
+                  <goal>report</goal>
+                </goals>
+                <configuration>
+                  <!-- Sets the path to the file which contains the execution data. -->
+                  <dataFile>${jacoco.reportPath}/jacoco-it.exec</dataFile>
+                  <!-- Sets the output directory for the code coverage report. -->
+                  <outputDirectory>${project.reporting.outputDirectory}/jacoco-it</outputDirectory>
+                </configuration>
+              </execution>
 
-<!--
-          <execution>
-            <id>merge-all-tests</id>
-            <phase>verify</phase>
-            <goals>
-              <goal>merge</goal>
-            </goals>
-            <configuration>
-              <fileSets>
-                <fileSet>
-                  <directory>${jacoco.reportPath}</directory>
-                  <includes>
-                    <include>*.exec</include>
-                  </includes>
-                  <excludes>
-                    <exclude>**/*-all.exec</exclude>
-                  </excludes>
-                </fileSet>
-              </fileSets>
-              <destFile>${jacoco.reportPath}/jacoco-all.exec</destFile>
-            </configuration>
-          </execution>--> <!--
+              <!--
+                        <execution>
+                          <id>merge-all-tests</id>
+                          <phase>verify</phase>
+                          <goals>
+                            <goal>merge</goal>
+                          </goals>
+                          <configuration>
+                            <fileSets>
+                              <fileSet>
+                                <directory>${jacoco.reportPath}</directory>
+                                <includes>
+                                  <include>*.exec</include>
+                                </includes>
+                                <excludes>
+                                  <exclude>**/*-all.exec</exclude>
+                                </excludes>
+                              </fileSet>
+                            </fileSets>
+                            <destFile>${jacoco.reportPath}/jacoco-all.exec</destFile>
+                          </configuration>
+                        </execution>--> <!--
           <execution>
             <id>report-aggregate</id>
             <phase>verify</phase>
@@ -543,30 +549,30 @@
               <outputDirectory>${project.reporting.outputDirectory}</outputDirectory>
             </configuration>
           </execution>-->
-           <execution>
+              <execution>
                 <id>jacoco-site</id>
                 <phase>verify</phase>
                 <goals>
                   <goal>report</goal>
                 </goals>
               </execution>
-        </executions>
-      </plugin>
-    </plugins>
-  </build>
-</profile>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
 
-</profiles>
+  </profiles>
 
-<distributionManagement>
-  <repository>
-    <id>redpill-linpro-releases</id>
-    <url>https://maven.redpill-linpro.com/nexus/content/repositories/releases</url>
-  </repository>
-  <snapshotRepository>
-    <id>redpill-linpro-snapshots</id>
-    <url>https://maven.redpill-linpro.com/nexus/content/repositories/snapshots</url>
-  </snapshotRepository>
-</distributionManagement>
+  <distributionManagement>
+    <repository>
+      <id>redpill-linpro-releases</id>
+      <url>https://maven.redpill-linpro.com/nexus/content/repositories/releases</url>
+    </repository>
+    <snapshotRepository>
+      <id>redpill-linpro-snapshots</id>
+      <url>https://maven.redpill-linpro.com/nexus/content/repositories/snapshots</url>
+    </snapshotRepository>
+  </distributionManagement>
 
 </project>
